--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ bin_PROGRAMS = ermod_gromacs ermod_namd slvfe
 dist_pkglibexec_SCRIPTS = vmdplugins/libexec/*.so
 
 ersources = engmain.f90 realcal_blk.f90 spline.f90 fft_iface.f90 mpiproc.f90 engproc.f90 recpcal.f90
-EXTRA_DIST = enganal.f insertion.f setconf.f stranal.f param_eng parameters_er.example gromacsfio.c
+EXTRA_DIST = enganal.f insertion.f setconf.f param_eng parameters_er.example gromacsfio.c
 EXTRA_DIST += tools/NAMD/*
 EXTRA_DIST += tools/gromacs/*
 EXTRA_DIST += vmdplugins/*.C vmdplugins/*.c vmdplugins/*.h vmdplugins/*.cxx vmdplugins/*.hxx vmdplugins/Makefile vmdplugins/LICENSE
@@ -29,7 +29,7 @@ extra_flags =
 # extra dependencies added
 ermod_gromacs-engproc.$(OBJEXT): engproc.f90 param_eng ermod_gromacs-insertion.$(OBJEXT) ermod_gromacs-recpcal.$(OBJEXT)
 
-ermod_gromacs-enganal.$(OBJEXT): enganal.f stranal.f param_eng ermod_gromacs-engproc.$(OBJEXT)
+ermod_gromacs-enganal.$(OBJEXT): enganal.f param_eng ermod_gromacs-engproc.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
 
 ermod_gromacs-insertion.$(OBJEXT): insertion.f param_eng ermod_gromacs-setconf.$(OBJEXT)
@@ -44,7 +44,7 @@ ermod_namd_LDADD = ermod_namd-enganal.$(OBJEXT) ermod_namd-insertion.$(OBJEXT) e
 
 ermod_namd-engproc.$(OBJEXT): engproc.f90 param_eng ermod_namd-insertion.$(OBJEXT) ermod_namd-recpcal.$(OBJEXT)
 
-ermod_namd-enganal.$(OBJEXT): enganal.f insertion.f setconf.f stranal.f param_eng ermod_namd-engproc.$(OBJEXT)
+ermod_namd-enganal.$(OBJEXT): enganal.f insertion.f setconf.f param_eng ermod_namd-engproc.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DNAMD -c -o $@ $<
 
 ermod_namd-insertion.$(OBJEXT): insertion.f param_eng ermod_namd-setconf.$(OBJEXT)
