--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = insertion.f setconf.f param_eng parameters_er.example gromacsfio.c
 EXTRA_DIST += tools/NAMD/*
 EXTRA_DIST += tools/gromacs/*
 EXTRA_DIST += vmdplugins/*.C vmdplugins/*.c vmdplugins/*.h vmdplugins/*.cxx vmdplugins/*.hxx vmdplugins/Makefile vmdplugins/LICENSE
+CLEANFILES = *.mod
 
 if USE_FFTW
 FFTFLAGS = -DFFTW
@@ -27,24 +28,28 @@ ermod_gromacs_LDADD = ermod_gromacs-insertion.$(OBJEXT) ermod_gromacs-setconf.$(
 extra_flags = 
 
 # extra dependencies added
-ermod_gromacs-engproc.$(OBJEXT): engproc.f90 param_eng ermod_gromacs-insertion.$(OBJEXT) ermod_gromacs-recpcal.$(OBJEXT)
+ermod_gromacs-engproc.$(OBJEXT): engproc.f90 ermod_gromacs-insertion.$(OBJEXT) ermod_gromacs-recpcal.$(OBJEXT) ermod_gromacs-recpcal.$(OBJEXT) ermod_gromacs-realcal_blk.$(OBJEXT)
+ermod_gromacs-enganal.$(OBJEXT): enganal.f90 ermod_gromacs-engproc.$(OBJEXT) ermod_gromacs-setconf.$(OBJEXT)
+ermod_gromacs-recpcal.$(OBJEXT): recpcal.f90 ermod_gromacs-spline.$(OBJEXT) ermod_gromacs-fft_iface.$(OBJEXT)
 
-ermod_gromacs-insertion.$(OBJEXT): insertion.f param_eng ermod_gromacs-setconf.$(OBJEXT)
+ermod_gromacs-insertion.$(OBJEXT): insertion.f ermod_gromacs-setconf.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
 
-ermod_gromacs-setconf.$(OBJEXT): setconf.f param_eng
+ermod_gromacs-setconf.$(OBJEXT): setconf.f ermod_gromacs-engmain.$(OBJEXT) ermod_gromacs-mpiproc.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DGROMACS -DVMDPLUGINS $(extra_flags) -c -o $@ $<
 
 ermod_namd_SOURCES = $(ersources)
 ermod_namd_FCFLAGS = -DNAMD $(FFTFLAGS)
 ermod_namd_LDADD = ermod_namd-insertion.$(OBJEXT) ermod_namd-setconf.$(OBJEXT) $(LAPACK_LIBS) $(BLAS_LIBS) $(FFTLIBS) $(MPILIBS)
 
-ermod_namd-engproc.$(OBJEXT): engproc.f90 param_eng ermod_namd-insertion.$(OBJEXT) ermod_namd-recpcal.$(OBJEXT)
+ermod_namd-engproc.$(OBJEXT): engproc.f90 param_eng ermod_namd-insertion.$(OBJEXT) ermod_namd-recpcal.$(OBJEXT) ermod_namd-recpcal.$(OBJEXT) ermod_namd-realcal_blk.$(OBJEXT)
+ermod_namd-enganal.$(OBJEXT): enganal.f90 ermod_namd-engproc.$(OBJEXT) ermod_namd-setconf.$(OBJEXT)
+ermod_namd-recpcal.$(OBJEXT): recpcal.f90 ermod_namd-spline.$(OBJEXT) ermod_namd-fft_iface.$(OBJEXT)
 
-ermod_namd-insertion.$(OBJEXT): insertion.f param_eng ermod_namd-setconf.$(OBJEXT)
+ermod_namd-insertion.$(OBJEXT): insertion.f ermod_namd-setconf.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DNAMD -c -o $@ $<
 
-ermod_namd-setconf.$(OBJEXT): setconf.f param_eng
+ermod_namd-setconf.$(OBJEXT): setconf.f ermod_namd-engmain.$(OBJEXT) ermod_namd-mpiproc.$(OBJEXT)
 	$(F77) $(AM_FFLAGS) $(FFLAGS) $(FFTFLAGS) -DNAMD -c -o $@ $<
 
 
