Added AMBER scripts in Makefile.am
--HG--
branch : ver03

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,8 @@ EXTRA_DIST = parameters_er.example parameters_fe.example
 EXTRA_DIST += trajectory-formats/*
 EXTRA_DIST += tools/NAMD/*
 EXTRA_DIST += tools/gromacs/*
+EXTRA_DIST += tools/AMBER/*
+EXTRA_DIST += tools/mol_dissection
 EXTRA_DIST += vmdplugins/*.C vmdplugins/*.c vmdplugins/*.h vmdplugins/*.cxx vmdplugins/*.hxx vmdplugins/Makefile vmdplugins/LICENSE
 CLEANFILES = *.mod
 
